// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip FeatureTooltip with warning message 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.773 17.341L20.885 1.75l-2.297 8.909h8.184L9.66 26.25l2.297-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
    >
      <p>
        this is warning message
      </p>
    </p>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.explorePlans
      </span>
    </button>
  </div>
</div>
`;

exports[`FeatureTooltip FeatureTooltip without warning message 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M3.773 17.341L20.885 1.75l-2.297 8.909h8.184L9.66 26.25l2.297-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
      >
        common.feature.levelUp.description
         🏁
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-white"
              data-icon="cd-main"
            >
              <svg
                height="16"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
                  fill="url(#cd-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="cd-main_svg__a"
                    x1="6.774"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            common.purpose.cd.continuous
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--padding-left-large StyledProps--color StyledProps--color-white"
          >
            <span>
              pipeline.featureRestriction.maxBuildsPerMonth100PercentLimit
            </span>
          </p>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.explorePlans
          </span>
        </button>
      </div>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-white"
              data-icon="ci-main"
            >
              <svg
                height="16"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
                  fill="url(#ci-main_svg__a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="ci-main_svg__a"
                    x1="-5.398"
                    x2="11.398"
                    y1="11.398"
                    y2="37.398"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            common.purpose.ci.continuous
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--padding-left-large StyledProps--color StyledProps--color-white"
          >
            common.feature.levelUp.limitMessage.description
             
            Deployments
            common.feature.levelUp.limitMessage.thisMonth
          </p>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.explorePlans
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
